2002-12-22 Ronald Oussoren <oussoren@cistron.nl>
    * Introduce support for libffi. For now the only advantages are a faster
      build and smaller libraries.

2002-12-19  Bill Bumgarner  <bbum@codefab.com>
    * RELEASE 0.8
    * Modules/Cocoa/_Foundation.m (and others):  Added #ifdefs that will only
    import the files if on 10.2 or greater.   This provides the foundation for
    10.1 compatibility, but the autogenerators and other pieces need to be put
    into places.

2002-12-17  Bill Bumgarner  <bbum@codefab.com>

    * Project Templates/Cocoa-Python Application/MyAppDelegate.py: Moved to
    AutoBaseClass.  Added significant documentation.

    * Project Templates/Cocoa-Python Application/bin-python-main.m: Integrated
    all of Jack's, Ronald's and my suggestions/patches/changes (that I could
    remember).

    * Project Templates/Cocoa-Python Application/__main__.py: Brought in line
    with Web Services Tool example.  Minimized the # of lines.

    * setup.py: Added test directories.

    * MANIFEST: Completely redid.

    * Scripts/buildpkg.py (PackageMaker.build): Tried to add RootOnly install
    flag.  Won't work until we move to new style packaging format.

    * ReadMe.txt: Added brief note about installing the packaged version.

    * Scripts/make_distrib.py (fd): Numerous changes.  Final products are
    built into a directory that can be directly disk imaged.  Directory
    contains readme, license, and changelog.  Package now contains developer
    examples. More cleanup of spurious files from trees to be packaged.

    * Cleaned up Cocoa-Python template;  synchronized with WebServicesTool
      example.  Added lots of comments.

2002-12-15 Ronald Oussoren <oussoren@cistron.nl>
    * Erase reference to the Python half before doing the [super release] 
      call that will release the Objective-C half of an instance of a
      Python subclass of an Objective-C class. This way we can't accidently